# falcon-eye-monitoring

./: Knownbugs.md  LICENSE  Makefile.db-exporter  Makefile.fem  Makefile.fem-dbexporter  Makefile.fem-demoapp  Makefile.fem-shellexporter  Makefile.fem-tests  Readme.md  docker-compose-db-exporter.yml  docker-compose-fem-dbexporter.yml  docker-compose-fem-demoapp.yml  docker-compose-fem-shellexporter.yml  docker-compose-fem.yml  grafana-dashboard-selenium-grid.json
.github/workflows/: actions.yml
config/: loki-config.yml  otel-collector-fem-config.yml  prometheus.yml
config/grafana-dashboard-templates/: mongob-exporter.json  shellexporter.json
config/grafana-provisioning/dashboards/: default.yml
config/grafana-provisioning/datasources/: default.yml
config/grafana-provisioning/plugins/: default.yml
dbexporter/: docker-compose-fem-dbexporter-mongodb.yml  docker-compose-fem-dbexporter-postgresql.yml
demoapp/: Dockerfile  docker-compose-fem-demoapp.yml
fem/: docker-compose-fem.yml
fem/config/: loki-config.yml  otel-collector-fem-config.yml  prometheus.yml  traefik-certs.yml  traefik.yml
readme/: context-fem-dbexporter.iuml  context-fem-shellexporter.iuml  context-fem.iuml
shellexporter/: Dockerfile  docker-compose-fem-shellexporter.yml
shellexporter/metrics/: bash_gauge.sh
tests/: Dockerfile  README.md  docker-compose-fem-tests.yml  pyproject.toml  pytest.ini
tests/src/: tests.sh
tests/src/pages/: demoapp.py  grafana.py
tests/src/test/: base.py  test_demoapp.py  test_grafana.py  test_grafana_demoapp.py  test_grafana_shellexporter.py
(+5 files in other folders)
