[tool.poetry]
name = "falcon-eye-monitoring"
version = "1.1.1"
description = "Like a falcon, everything in sight! F.E.M. brings it all together: logfile, traces, metrics."
authors = ["2Fraennk", "ronnyfriedland"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
playwright = "^1.45.0"
pytest-playwright = "^0.5.1"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
