[project]
name = "falcon-eye-monitoring"
version = "1.1.1"
description = "Like a falcon, everything in sight! F.E.M. brings it all together: logfile, traces, metrics."
authors = [
    { name = "2Fraennk" },
    { name = "ronnyfriedland" },
]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "pytest>=8.2.2,<9",
    "playwright>=1.45.0,<2",
    "pytest-playwright>=0.5.1,<0.6",
    "faker>=26.0.0,<27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["falcon-eye-monitoring/tests"]
